--- a/src/app/categoryshow/categoryshow.component.html
+++ b/src/app/categoryshow/categoryshow.component.html
@@ -1,5 +1,8 @@
-<div class="container">
+<div class="container-fluid">
     <div class="row">
+        <div class="title">
+        <p>Categories</p>
+        </div>
         <div class="col-md-4">
             <img src="../../assets/tulsi tea.jpg" class="img-fluid" alt="...">
             <span>Tea and Infusion</span>
@@ -27,7 +30,7 @@
 
         <div class="col-md-4">
             <img src="../../assets/gift.jpg" class="img-fluid" alt="...">
-            <span>Gifting</span>
+            <span>Gifting and Wishes</span>
         </div>
 
         
