--- a/src/app/categoryshow/categoryshow.component.css
+++ b/src/app/categoryshow/categoryshow.component.css
@@ -1,18 +1,27 @@
-img{
-    padding-top: 35px;
-    height: 350px;
-    width: 380px;
-    padding-bottom: 20px;
-    padding-left: 10px;
+.row{
+    margin-left: 20px;
+    margin-right: 20px;
 }
 span{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
+    
     padding-top: 20px;
-    margin-left: 120px;
+    font-size: 30px;
     border-radius: 5px;
 }
 
-img:hover{
-    transform: scale(1.1);
+p{
+    font-size: 50px; 
+
+}
+.col-md-4{
+    text-align: center;
+}
+
+img{
+padding: 0,0,10px,10px;
+}
+.title{
+    text-align: center;
 }
