--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#"><h5 [ngStyle]="{'color':'black'}">Home</h5></a>
+          <a class="nav-link active" aria-current="page" routerLink="home"><h5 [ngStyle]="{'color':'black'}">Home</h5></a>
         </li>
         
         <li class="nav-item dropdown " >
@@ -24,7 +24,7 @@
           
           <ul class="dropdown-menu" data-dropdown-menu>
             <li>
-              <span class="nav-link-dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+              <span class="nav-link-dropdown-toggle" routerLink="/tea" data-bs-toggle="dropdown" aria-expanded="false">
                  Tea and Infusion </span>
                
                 <ul>
@@ -61,6 +61,10 @@
         <li class="nav-item">
           <a class="nav-link" href="#"><h5 [ngStyle]="{'color':'black' }">Winter Care</h5></a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink='login'><h5 [ngStyle]="{'color':'orange' }">login</h5></a>
+        </li>
         
       </ul>
       <form class="d-flex" role="search">
@@ -69,4 +73,6 @@
       </form>
     </div>
   </div>
-</nav>
+</nav> 
+
+
